--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -63,6 +63,22 @@
 %
 % ^^A todo: make sanitize and pack more homogeneous between modules.
 %
+% \subsection{Access to primitives}
+%
+% \begin{macro}
+%   {\@@_int_eval:w,\@@_int_eval_end:, \@@_int_to_roman:w, \@@_int_value:w}
+%   Largely for performance reasons, we need to directly access primitives
+%   rather than use \cs{int_eval:n}. This happens \emph{a lot}, so we
+%   use private names. The same is true for \tn{romannumeral}, although it
+%   is used much less widely.
+%    \begin{macrocode}
+\cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
+\cs_new_eq:NN \@@_int_eval_end: \scan_stop:
+\cs_new_eq:NN \@@_int_to_roman:w \tex_romannumeral:D
+\cs_new_eq:NN \@@_int_value:w \tex_number:D
+%     \end{macrocode}
+% \end{macro}
+%
 % \subsection{Internal representation}
 %
 % Internally, a floating point number \meta{X} is a
@@ -344,12 +360,12 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_neg_sign:N}
-%   When appearing in an integer expression or after \cs{__int_value:w},
+%   When appearing in an integer expression or after \cs{@@_int_value:w},
 %   this expands to the sign opposite to |#1|, namely $0$ (positive) is
 %   turned to $2$ (negative), $1$ (\texttt{nan}) to $1$, and $2$ to $0$.
 %    \begin{macrocode}
 \cs_new:Npn \@@_neg_sign:N #1
-  { \__int_eval:w 2 - #1 \__int_eval_end: }
+  { \@@_int_eval:w 2 - #1 \@@_int_eval_end: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -454,11 +470,11 @@
   {
     \exp_after:wN \@@_exp_after_normal:Nwwwww
     \exp_after:wN #2
-    \__int_value:w #3   \exp_after:wN ;
-    \__int_value:w 1 #4 \exp_after:wN ;
-    \__int_value:w 1 #5 \exp_after:wN ;
-    \__int_value:w 1 #6 \exp_after:wN ;
-    \__int_value:w 1 #7 \exp_after:wN ; #1
+    \@@_int_value:w #3   \exp_after:wN ;
+    \@@_int_value:w 1 #4 \exp_after:wN ;
+    \@@_int_value:w 1 #5 \exp_after:wN ;
+    \@@_int_value:w 1 #6 \exp_after:wN ;
+    \@@_int_value:w 1 #7 \exp_after:wN ; #1
   }
 \cs_new:Npn \@@_exp_after_normal:Nwwwww
     #1 #2; 1 #3 ; 1 #4 ; 1 #5 ; 1 #6 ;
@@ -497,10 +513,10 @@
   { \@@_tuple_count:w \s_@@_tuple \@@_tuple_chk:w {#1} ; }
 \cs_new:Npn \@@_tuple_count:w \s_@@_tuple \@@_tuple_chk:w #1 ;
   {
-    \__int_value:w \__int_eval:w 0
+    \@@_int_value:w \@@_int_eval:w 0
       \@@_tuple_count_loop:Nw #1 { ? \__prg_break: } ;
       \__prg_break_point:
-    \__int_eval_end:
+    \@@_int_eval_end:
   }
 \cs_new:Npn \@@_tuple_count_loop:Nw #1#2;
   { \use_none:n #1 + 1 \@@_tuple_count_loop:Nw }
@@ -670,7 +686,7 @@
 % \begin{verbatim}
 %   \cs_new:Npn \pack:NNNNNw #1 #2#3#4#5 #6; { {#2#3#4#5} {#6} }
 %   \exp_after:wN \pack:NNNNNw
-%     \__int_value:w \__int_eval:w 1 0000 0000 + #1 ;
+%     \@@_int_value:w \@@_int_eval:w 1 0000 0000 + #1 ;
 % \end{verbatim}
 % The idea is that adding $10^8$ to the number ensures that it has
 % exactly $9$ digits, and can then easily find which digits correspond
@@ -685,19 +701,19 @@
 % 6677\,8899$.  With simplified names, we would do
 % \begin{verbatim}
 %   \exp_after:wN \post_processing:w
-%   \__int_value:w \__int_eval:w - 5 0000
+%   \@@_int_value:w \@@_int_eval:w - 5 0000
 %     \exp_after:wN \pack:NNNNNw
-%     \__int_value:w \__int_eval:w 4 9995 0000
+%     \@@_int_value:w \@@_int_eval:w 4 9995 0000
 %       + 12345 * 6677
 %       \exp_after:wN \pack:NNNNNw
-%       \__int_value:w \__int_eval:w 5 0000 0000
+%       \@@_int_value:w \@@_int_eval:w 5 0000 0000
 %         + 12345 * 8899 ;
 % \end{verbatim}
-% The \cs{exp_after:wN} triggers |\__int_value:w \__int_eval:w|, which
+% The \cs{exp_after:wN} triggers |\@@_int_value:w \@@_int_eval:w|, which
 % starts a first computation, whose initial value is $- 5\,0000$ (the
 % \enquote{leading shift}).  In that computation appears an
 % \cs{exp_after:wN}, which triggers the nested computation
-% |\__int_value:w \__int_eval:w| with starting value $4\,9995\,0000$ (the
+% |\@@_int_value:w \@@_int_eval:w| with starting value $4\,9995\,0000$ (the
 % \enquote{middle shift}).  That, in turn, expands \cs{exp_after:wN}
 % which triggers the third computation.  The third computation's value
 % is $5\,0000\,0000 + 12345 \times 8899$, which has $9$ digits. Adding
@@ -858,7 +874,7 @@
     \if_meaning:w 2 #1
       + 1
     \fi:
-    \__int_eval_end:
+    \@@_int_eval_end:
     #2#3#4; {#5} ;
   }
 \cs_new:Npn \@@_basics_pack_weird_high:NNNNNNNNw
@@ -911,10 +927,10 @@
   {
     \cs:w
       @@_decimate_
-      \if_int_compare:w \__int_eval:w #1 > \c_@@_prec_int
+      \if_int_compare:w \@@_int_eval:w #1 > \c_@@_prec_int
         tiny
       \else:
-        \__int_to_roman:w \__int_eval:w #1
+        \@@_int_to_roman:w \@@_int_eval:w #1
       \fi:
       :Nnnnn
     \cs_end:
@@ -970,7 +986,7 @@
     \cs_new:cpn { @@_decimate_ #1 :Nnnnn } ##1 ##2##3##4##5
       {
         \exp_after:wN ##1
-        \__int_value:w
+        \@@_int_value:w
           \exp_after:wN \@@_round_digit:Nw #2 ;
         \@@_decimate_pack:nnnnnnnnnnw #3 ;
       }
@@ -996,7 +1012,7 @@
 %
 % \begin{macro}[EXP]{\@@_decimate_pack:nnnnnnnnnnw}
 %   The computation of the \meta{rounding} digit leaves an unfinished
-%   \cs{__int_value:w}, which expands the following functions. This
+%   \cs{@@_int_value:w}, which expands the following functions. This
 %   allows us to repack nicely the digits we keep. Those digits come
 %   as an alternation of unbraced and braced blocks of $4$ digits,
 %   such that the first $5$ groups of token consist in $4$ single digits,
@@ -1160,7 +1176,7 @@
     \or:
       \@@_case_return:nw
         {
-          \exp_after:wN \@@_small_int_true:wTF \__int_value:w
+          \exp_after:wN \@@_small_int_true:wTF \@@_int_value:w
             \if_meaning:w 2 #2 - \fi: 1 0000 0000 ;
         }
     \else: \@@_case_return:nw \use_ii:nn
@@ -1178,7 +1194,7 @@
   {
     \if_meaning:w 0 #1
       \exp_after:wN \@@_small_int_true:wTF
-      \__int_value:w \if_meaning:w 2 #5 - \fi:
+      \@@_int_value:w \if_meaning:w 2 #5 - \fi:
         \if_int_compare:w #2 > 0 \exp_stop_f:
           1 0000 0000
         \else:
