--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -166,7 +166,7 @@
 %   \meta{digit_1}.\meta{digit_2}$ to an integer rounds it towards zero
 %   (truncates it), this function expands to |0\exp_stop_f:|, and otherwise
 %   to |1\exp_stop_f:|.  Typically used within the scope of an
-%   \cs{__int_eval:w}, to add~$1$ if needed, and thereby round
+%   \cs{@@_int_eval:w}, to add~$1$ if needed, and thereby round
 %   correctly.  The result depends on the rounding mode.
 %
 %   It is very important that \meta{final sign} be the final sign of the
@@ -272,7 +272,7 @@
 %   \meta{digit}.\meta{more digits}$ to an integer truncates, and to
 %   |1\exp_stop_f:;| otherwise.  The \meta{more digits} part must be a digit,
 %   followed by something that does not overflow a \cs{int_use:N}
-%   \cs{__int_eval:w} construction.  The only relevant information about
+%   \cs{@@_int_eval:w} construction.  The only relevant information about
 %   this piece is whether it is zero or not.
 %    \begin{macrocode}
 \cs_new:Npn \@@_round_s:NNNw #1 #2 #3 #4;
@@ -280,11 +280,11 @@
     \exp_after:wN \@@_round:NNN
     \exp_after:wN #1
     \exp_after:wN #2
-    \__int_value:w \__int_eval:w
+    \@@_int_value:w \@@_int_eval:w
       \if_int_odd:w 0 \if_meaning:w 0 #3 1 \fi:
                       \if_meaning:w 5 #3 1 \fi:
                 \exp_stop_f:
-        \if_int_compare:w \__int_eval:w #4 > 0 \exp_stop_f:
+        \if_int_compare:w \@@_int_eval:w #4 > 0 \exp_stop_f:
           1 +
         \fi:
       \fi:
@@ -296,11 +296,11 @@
 %
 % \begin{macro}[EXP]{\@@_round_digit:Nw}
 %   \begin{syntax}
-%     \cs{__int_value:w} \cs{@@_round_digit:Nw} \meta{digit} \meta{intexpr} |;|
+%     \cs{@@_int_value:w} \cs{@@_round_digit:Nw} \meta{digit} \meta{intexpr} |;|
 %   \end{syntax}
-%   This function should always be called within an \cs{__int_value:w}
-%   or \cs{__int_eval:w} expansion; it may add an extra
-%   \cs{__int_eval:w}, which means that the integer or integer
+%   This function should always be called within an \cs{@@_int_value:w}
+%   or \cs{@@_int_eval:w} expansion; it may add an extra
+%   \cs{@@_int_eval:w}, which means that the integer or integer
 %   expression should not be ended with a synonym of \tn{relax}, but
 %   with a semi-colon for instance.
 %    \begin{macrocode}
@@ -309,8 +309,8 @@
     \if_int_odd:w \if_meaning:w 0 #1 1 \else:
                   \if_meaning:w 5 #1 1 \else:
                   0 \fi: \fi: \exp_stop_f:
-      \if_int_compare:w \__int_eval:w #2 > 0 \exp_stop_f:
-        \__int_eval:w 1 +
+      \if_int_compare:w \@@_int_eval:w #2 > 0 \exp_stop_f:
+        \@@_int_eval:w 1 +
       \fi:
     \fi:
     #1
@@ -390,7 +390,7 @@
 \cs_new:Npn \@@_round_aux_o:Nw #1#2 @
   {
     \if_case:w
-      \__int_eval:w \@@_array_count:n {#2} \__int_eval_end:
+      \@@_int_eval:w \@@_array_count:n {#2} \@@_int_eval_end:
          \@@_round_no_arg_o:Nw #1 \exp:w
     \or: \@@_round:Nwn #1 #2 {0} \exp:w
     \or: \@@_round:Nww #1 #2 \exp:w
@@ -494,7 +494,7 @@
     \if_meaning:w 1 #2
       \exp_after:wN \@@_round_normal:NwNNnw
       \exp_after:wN #1
-      \__int_value:w #5
+      \@@_int_value:w #5
     \else:
       \exp_after:wN \@@_exp_after_o:w
     \fi:
@@ -508,25 +508,25 @@
 \cs_new:Npn \@@_round_normal:NnnwNNnn #1#2#3#4; #5#6
   {
     \exp_after:wN \@@_round_normal:NNwNnn
-    \__int_value:w \__int_eval:w
+    \@@_int_value:w \@@_int_eval:w
       \if_int_compare:w #2 > 0 \exp_stop_f:
-        1 \__int_value:w #2
+        1 \@@_int_value:w #2
         \exp_after:wN \@@_round_pack:Nw
-        \__int_value:w \__int_eval:w 1#3 +
+        \@@_int_value:w \@@_int_eval:w 1#3 +
       \else:
         \if_int_compare:w #3 > 0 \exp_stop_f:
-          1 \__int_value:w #3 +
+          1 \@@_int_value:w #3 +
         \fi:
       \fi:
       \exp_after:wN #5
       \exp_after:wN #6
       \use_none:nnnnnnn #3
       #1
-      \__int_eval_end:
+      \@@_int_eval_end:
       0000 0000 0000 0000 ; #6
   }
 \cs_new:Npn \@@_round_pack:Nw #1
-  { \if_meaning:w 2 #1 + 1 \fi: \__int_eval_end: }
+  { \if_meaning:w 2 #1 + 1 \fi: \@@_int_eval_end: }
 \cs_new:Npn \@@_round_normal:NNwNnn #1 #2
   {
     \if_meaning:w 0 #2
@@ -551,7 +551,7 @@
     \else:
       \exp_after:wN \@@_round_special_aux:Nw
       \exp_after:wN #4
-      \__int_value:w \__int_eval:w 1
+      \@@_int_value:w \@@_int_eval:w 1
         \if_meaning:w 1 #1 -#6 \else: +#5 \fi:
     \fi:
     ;
